[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-acm-exporter"
version = "1.1.0"
description = "Prometheus exporter for AWS Certificate Manager (ACM)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Prometheus ACM Exporter Contributors"}
]
keywords = ["prometheus", "acm", "aws", "exporter", "certificates", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "boto3==1.34.0",
    "prometheus-client==0.20.0",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
]

[project.scripts]
acm-exporter = "acm_exporter:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]
